--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-layer",
-  "version": "1.0.0",
-  "description": "Asynchronous API layer library with caching and type safety",
+  "version": "0.1.0",
+  "description": "Asynchronous API layer library",
   "main": "lib/index.ts",
   "types": "lib/index.d.ts",
   "scripts": {
