--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "./lib",
     "baseUrl": "./src",
     "strict": true,
-    "lib": ["esnext", "es2015", "dom"]
+    "lib": ["esnext", "es2015", "dom"],
+    "esModuleInterop": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/__tests__/*"]
