--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest ./src",
+    "test": "jest ./",
     "format": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "prepare": "npm run build",
@@ -53,6 +53,8 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
+    "@types/memoizee": "^0.4.3",
+    "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
@@ -64,11 +66,10 @@
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "lint-staged": "^10.1.3",
+    "memoizee": "^0.4.14",
     "prettier": "^2.0.4",
     "ts-jest": "^25.3.1",
-    "typescript": "^3.8.3",
-    "@types/memoizee": "^0.4.3",
-    "memoizee": "^0.4.14"
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
