Full documentation and slight api change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "outDir": "./lib",
     "baseUrl": "./src",
     "strict": true,
-    "lib": ["esnext", "es2015", "dom"],
-    "esModuleInterop": true
+    "lib": ["esnext", "es2015", "dom"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/__tests__/*"]
