--- a/package.json
+++ b/package.json
@@ -53,10 +53,11 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
-    "@types/memoizee": "^0.4.3",
+    "@types/memoizee": "^0.4.4",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
+    "ajv": "^6.12.4",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-typescript": "^2.0.0",
