--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
+    "module": "es6",
     "target": "es5",
-    "module": "commonjs",
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "./lib/esm",
     "strict": true,
-    "lib": ["esnext", "es2015", "dom"]
+    "moduleResolution": "node"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/__tests__/*"]
+  "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
 }
