--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "module": "es6",
     "target": "es5",
     "declaration": true,
-    "outDir": "./lib/esm",
+    "outDir": "./lib",
     "strict": true,
     "moduleResolution": "node"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
+  "exclude": ["node_modules", "lib", "cjs", "**/*.test.ts", "**/__tests__/*"]
 }
