--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "outDir": "./cjs",
-    "esModuleInterop": false
+    "outDir": "./lib/cjs"
   },
 }
