--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
     "module": "es6",
     "target": "es5",
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "./lib/esm",
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "lib", "cjs", "**/*.test.ts", "**/__tests__/*"]
+  "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
 }
