--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "allowJs": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
