Updated caniuse and removed app

--- a/samples/storybook/package.json
+++ b/samples/storybook/package.json
@@ -12,9 +12,8 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "yarn storybook",
+    "build": "yarn build-storybook",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
