--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "ajv": "^6.12.4",
+    "auto-changelog": "^2.2.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-typescript": "^2.0.0",
@@ -79,7 +80,8 @@
     "prettier": "^2.0.4",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3",
-    "auto-changelog": "^2.2.1"
+    "webpack": "^5.1.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "husky": {
     "hooks": {
@@ -92,5 +94,7 @@
       "git add"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "caller-dirname": "^2.0.0"
+  }
 }
