--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
+    "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p tsconfig.json && cp package.esm.json ./lib/esm/package.json",
     "build:cjs": "tsc -p tsconfig-cjs.json && cp package.cjs.json ./lib/cjs/package.json",
-    "test": "jest ./",
+    "test": "jest",
     "format": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm run test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && npm run changelog && git add -A src && git add CHANGELOG.md",
     "postversion": "git push && git push --tags",
