--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,12 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowJs": true,
+		"plugins": [
+			{
+				"transform": "@zoltu/typescript-transformer-append-js-extension/output/index.js",
+				"after": true,
+			}
+		]
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib", "**/*.test.ts", "**/__tests__/*"]
